# ResumeRank_app_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  out.txt  pyproject.toml  requirements-dev.txt  requirements.txt  scratch_test.py  scratch_test_scoring.py  test_cloud.py  test_direct.py  test_groq.py  test_ipv4_patch.py  test_logic.py  test_rewrite.py
scratch/: audit_edge_cases.py  test_auth_logic.py  test_backend_response.py  test_job_mapping.py  verify_auth.py  verify_auth_core.py  verify_logic_depth.py
scripts/: generate_esco_fixture.py
src/application/dto/: analyze_request.py  score_response.py
src/application/use_cases/: analyze_resume.py  gdpr_delete.py  get_job_status.py  get_market_insights.py
src/domain/entities/: job_description.py  resume.py  score_result.py
src/domain/models/: history.py  job.py  user.py
src/domain/ports/: cache_repository.py  embedder.py  pdf_extractor.py  scanner.py  skill_graph.py
src/domain/services/: ats_parse_checker.py  ats_scorer.py  job_skill_mapper.py  keyword_analyzer.py  persona_analyzer.py  resume_validator.py  salary_estimator.py  scoring.py  scoring_service.py  section_scorer.py  tone_analyzer.py
src/infrastructure/: database.py  di.py
src/infrastructure/cache/: memory_cache.py  redis_cache.py
src/infrastructure/jobs/: job_store.py  memory_job_store.py
src/infrastructure/ml/: minilm_embedder.py  tfidf_fallback.py
src/infrastructure/pdf/: pymupdf_extractor.py
src/infrastructure/security/: api_key_middleware.py  auth_service.py  clamav_scanner.py  noop_scanner.py
src/infrastructure/skills/: esco_loader.py  networkx_graph.py
src/infrastructure/skills/data/: esco_skills.json
src/infrastructure/telemetry/: metrics.py  otel.py
src/presentation/: app.py
src/presentation/api/: dependencies.py
src/presentation/api/v1/: analyze.py  auth.py  gdpr.py  health.py  history.py  insights.py  jobs.py  rewrite.py  skills.py  status.py
tests/: conftest.py  test_2col_pdf.py  test_ats_scorer.py  test_circuit_breaker.py  test_gdpr.py  test_rate_limit.py  test_scanned_pdf.py  test_scoring.py  test_scoring_service.py
