[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resumerank-backend"
version = "1.0.0"
description = "ResumeRank Pro – Production ATS Backend"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ANN",  # flake8-annotations
  "S",    # flake8-bandit (security)
  "T20",  # flake8-print
  "RUF",  # ruff-specific rules
  "PT",   # flake8-pytest-style
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "PL",   # pylint
]
ignore = [
  "ANN101",  # missing self annotation
  "ANN102",  # missing cls annotation
  "S101",    # use of assert (allowed in tests)
  "PLR0913", # too many arguments (DI containers need them)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN", "T20", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "fitz.*",
  "clamd.*",
  "faiss.*",
  "sentence_transformers.*",
  "networkx.*",
  "sklearn.*",
  "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
]
markers = [
  "benchmark: latency SLA benchmarks",
  "integration: requires Redis + ClamAV",
  "unit: pure unit tests (no I/O)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@overload",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
